Corrected caps letter spacing

--- a/css/typography.css
+++ b/css/typography.css
@@ -78,7 +78,7 @@ h6, .heading-xxs {
     font-weight: 500;
     line-height: 1;
     text-transform: uppercase;
-    letter-spacing: -0.05em;
+    letter-spacing: 0.05em;
 }
 .caps-l {
         font-size: var(--step-2, 1.56rem);
